processed/jira/txt/LU/LU-8724.txt
Key:        LU-8724
Summary:    several llapi functions use opendir() when open() would suffice
Link:       https://jira.whamcloud.com/browse/LU-8724
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Steve Guminski
Reporter:   John Hammond
Created:    Tue, 18 Oct 2016 21:35:32 +0000
Updated:    Fri, 23 Dec 2016 13:42:53 +0000
Resolved:   Fri, 23 Dec 2016 13:42:53 +0000
Labels:     easy, llapi

--- Description ---
llapi_get_obd_count(), llapi_ostlist(), llapi_quotactl(), llapi_get_connect_flags(), and possibly other llapi functions are using opendir(), dirfd(), and closedir() when open() and close() would suffice.

--- Comment (pjones, Fri, 23 Dec 2016 13:42:53 +0000) ---
Landed for 2.10

--- Comment (gerrit, Fri, 23 Dec 2016 05:05:37 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/23981/

Subject: LU-8724 utils: Use open() instead of opendir() with dirfd()

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 44b6af40f70cf065e8198b6b438d6c953063d003

--- Comment (sguminsx, Mon, 28 Nov 2016 20:57:56 +0000) ---
OK.  setup_obd_uuid() is called elsewhere, so I'll have to update the other code that will be impacted.  I'll upload a new patch when those changes are made.

--- Comment (jhammond, Mon, 28 Nov 2016 20:39:43 +0000) ---
James, please open a new issue.

--- Comment (jhammond, Mon, 28 Nov 2016 20:36:04 +0000) ---
> I don't think llapi_ostlist() should be changed, because it uses the opened directory as a parameter to setup_obd_uuid(), which takes a DIR pointer.

setup_obd_uuid() only uses the dir parameter as an argument to dirfd(). So its DIR *dir parameter should be replaced with int fd.

--- Comment (simmonsja, Mon, 28 Nov 2016 18:56:50 +0000) ---
While you are at it another issue exist as well with newer platforms. On my Ubuntu 16 system I get the following build issues:

gcc -DHAVE_CONFIG_H -I. -I../..   -include /usr/src/lustre-2.8.60/undef.h -include /usr/src/lustre-2.8.60/config.h -I/usr/src/lustre-2.8.60/libcfs/include -I/usr/src/lustre-2.8.60/lnet/include -I/usr/src/lustre-2.8.60/lustre/include  -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -g -O2 -Wall -Werror -MT liblustreapi.o -MD -MP -MF .deps/liblustreapi.Tpo -c -o liblustreapi.o liblustreapi.c

liblustreapi.c: In function ‘llapi_get_poollist’:

liblustreapi.c:1196:3: error: ‘readdir_r’ is deprecated [-Werror=deprecated-declarations]

   rc = readdir_r(dir, &pool, &cookie);

   ^~

In file included from /usr/include/features.h:364:0,

                 from /usr/include/mntent.h:22,

                 from liblustreapi.c:44:

/usr/include/dirent.h:189:12: note: declared here

 extern int __REDIRECT (readdir_r,

            ^

cc1: all warnings being treated as errors

Makefile:1191: recipe for target 'liblustreapi.o' failed

readdir() is the replacement for this function,

--- Comment (gerrit, Mon, 28 Nov 2016 18:44:45 +0000) ---
Steve Guminski (stephenx.guminski@intel.com) uploaded a new patch: http://review.whamcloud.com/23981

Subject: LU-8724 utils: Use open() instead of opendir() with dirfd()

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: f57b28954e8fff0467e3d7877c003c62cefe768f

--- Comment (sguminsx, Mon, 28 Nov 2016 18:05:30 +0000) ---
I don't think llapi_ostlist() should be changed, because it uses the opened directory as a parameter to setup_obd_uuid(), which takes a DIR pointer.
